<resources>
    <string name="app_name">蓝莺IM</string>
    <string name="tab_chat">对话</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_mine">设置</string>
    <string name="block_message">LanyingIM</string>
    <string name="recent_chat">蓝莺IM</string>
    <string name="group">群组</string>
    <string name="group_info">群详情(%s)</string>
    <string name="choose_group_member">选择群成员</string>
    <string name="group_member">群成员</string>
    <string name="group_id">群ID</string>
    <string name="group_owner_id">群主ID</string>
    <string name="group_type">群类型</string>
    <string name="group_type_public">公开群</string>
    <string name="group_type_private">私有群</string>
    <string name="group_type_chat_room">聊天室</string>
    <string name="group_qrcode">群二维码</string>
    <string name="group_manager">群管理</string>
    <string name="group_rename">修改群名称</string>
    <string name="group_manager_list">管理员列表</string>
    <string name="group_name">群名称</string>
    <string name="group_desc">群描述</string>
    <string name="group_notice">群公告</string>
    <string name="group_ext">群扩展信息</string>
    <string name="group_share">群共享列表</string>
    <string name="group_read_mode">群已读</string>
    <string name="group_quit">删除并退出</string>
    <string name="group_destroy">解散群聊</string>
    <string name="group_quit_notice">确定退出群聊?</string>
    <string name="group_destroy_notice">确定解散群聊?</string>
    <string name="group_setting">群设置</string>
    <string name="group_mute_msg">屏蔽群消息</string>
    <string name="group_show_msg">接收并提示群消息</string>
    <string name="group_invite_confirm">群聊邀请确认</string>
    <string name="group_trans">群主管理权转让</string>
    <string name="group_black">群成员黑名单</string>
    <string name="group_ban">群成员禁言</string>
    <string name="group_all_ban">全员禁言</string>
    <string name="group_ban_time">禁言时间(分钟) 为空永久禁言</string>
    <string name="group_ban_reason">禁言原因</string>
    <string name="group_apply">入群申请</string>
    <string name="group_notify_mode">群消息通知模式</string>
    <string name="group_join_auth_mode">入群审批模式</string>
    <string name="group_invite_mode">邀请入群模式</string>
    <string name="group_beInvite_mode">被邀请入群模式</string>
    <string name="group_avatar">群头像</string>
    <string name="group_my_name">我在群里的昵称</string>
    <string name="group_share_info">共享文件信息</string>
    <string name="group_add_members">添加群成员</string>
    <string name="group_remove_members">移除群成员</string>
    <string name="setting">设置</string>
    <string name="choose_file">选择文件</string>
    <string name="chat_file_not_exit">文件不存在！</string>
    <string name="chat_file_not_open">没有可以打开该文件的应用</string>
    <string name="chat_msg_copy">复制</string>
    <string name="chat_msg_relay">转发</string>
    <string name="chat_msg_revoke">撤回</string>
    <string name="chat_msg_reSend">重新发送</string>
    <string name="chat_msg_ack">标记已读</string>
    <string name="chat_msg_unread">设置未读</string>
    <string name="chat_clear_msg">清除聊天记录</string>
    <string name="chat_at_message">%s&#160;</string>
    <string name="group_read_list">消息接收人列表</string>
    <string name="readed_list">已读列表</string>
    <string name="unRead_list">未读列表</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="profile">资料</string>
    <string name="profile_phone">手机号</string>
    <string name="profile_public">公有信息</string>
    <string name="begin_chat">开始聊天</string>
    <string name="send">发送</string>
    <string name="search_hint">搜索</string>
    <string name="verify_continue">继续</string>
    <string name="skip">跳过</string>
    <string name="contact_apply_notice">好友申请与通知</string>
    <string name="contact_group">群组</string>
    <string name="create_group">创建群组</string>
    <string name="choose_contact">选择联系人</string>
    <string name="group_invite">群系统消息</string>
    <string name="pop_add_friend">添加朋友</string>
    <string name="pop_create_group">创建群组</string>
    <string name="pop_scan">扫一扫</string>
    <string name="permission_title">权限申请</string>
    <string name="permission_setting">去设置</string>
    <string name="permission_prompt">在设置中开启权限，以保证正常使用</string>
    <string name="record_fail_check_permission">录音失败，请检查权限</string>
    <string name="camera_fail_check_permission">拍照失败，请检查权限</string>
    <string name="video_fail_check_permission">录制视频失败，请检查权限</string>
    <string name="location_fail_check_permission">定位失败，请检查权限</string>
    <string name="not_has_sd_permission">没有手机存储权限</string>
    <string name="video_call_fail_check_permission">音视频会话失败，请检查权限</string>
    <string name="permission_read_storage">存储空间和媒体</string>
    <string name="permission_fine_location">精确位置信息</string>
    <string name="permission_coarse_location">位置信息</string>
    <string name="permission_camera">摄像头</string>
    <string name="permission_mic">麦克风</string>
    <string name="permission_text_read_storage">ⓘ存储空间和媒体权限用于读取设备文件存储系统，发送本地文件</string>
    <string name="permission_text_fine_location">ⓘ精确位置信息权限用于通过GPS芯片接收卫星的定位信息，实现发送位置消息</string>
    <string name="permission_text_coarse_location">ⓘ位置信息权限用于通过WiFi或移动基站的方式获取用户错略的经纬度信息，实现发送位置消息</string>
    <string name="permission_text_camera">ⓘ摄像头权限用于拍摄照片或视频，实现发送图片或视频消息，或扫描二维码获取账号信息、App ID等</string>
    <string name="permission_text_mic">ⓘ麦克风权限用于录音，实现发送语音消息或进行实时音视频通话</string>
    <string name="login">登录</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="register">注册</string>
    <string name="login_user_name_hint">用户名/手机号</string>
    <string name="login_user_phone_hint">手机号</string>
    <string name="login_user_verify_hint">验证码</string>
    <string name="login_user_id_hint">请输入用户id</string>
    <string name="login_user_pwd_hint">输入登录密码</string>
    <string name="register_user_phone_hint">请输入手机号</string>
    <string name="register_user_name_hint">用户名</string>
    <string name="register_user_verify_hint">请输入验证码</string>
    <string name="register_user_pwd_hint">密码</string>
    <string name="quick_login">快捷登录</string>
    <string name="verify_login">验证码登录</string>
    <string name="bind_mobile">绑定手机号</string>
    <string name="bind_new_mobile">绑定新的手机号</string>
    <string name="bind_user">绑定已有账户</string>
    <string name="bind_register_user">注册并绑定账户</string>
    <string name="bind_not_user">暂无账户,点击创建</string>
    <string name="bind_exit_user">已有账户,直接绑定</string>
    <string name="exit_user">该用户名已存在</string>
    <string name="register_protocol1">注册即代表同意</string>
    <string name="register_protocol2">用户服务</string>
    <string name="register_protocol3">及</string>
    <string name="register_protocol4">隐私政策</string>
    <string name="register_protocol_content1">欢迎使用蓝莺IM!\n\n请您务必审慎阅读,充分理解"用户协议"和"隐私政策"各条款,包括但不限于:为了向您提供即时通讯、内容分享等服务,我们需要收集您的设备信息、操作日志等个人信息\n\n您可阅读</string>
    <string name="register_protocol_content2">了解详细信息。如您同意,请点击"同意"开始接受我们的服务。</string>
    <string name="verify_pwd_hint">输入登录密码</string>
    <string name="un_bind_wechat">解绑微信</string>
    <string name="un_bind_wechat_tag">解绑时,需要输入密码验证</string>
    <string name="unbind_wechat_continue">确认解绑</string>
    <string name="verify_pwd_title">验证密码</string>
    <string name="verify_captcha_title">验证手机号</string>
    <string name="verify_pwd_tag">登录密码验证身份</string>
    <string name="verify_captcha_tag">已绑定手机号验证身份</string>
    <string name="user_info">个人信息</string>
    <string name="user_protocol">用户协议</string>
    <string name="version_info">版本信息</string>
    <string name="quit_app">退出</string>
    <string name="receive_push_notice">接受新消息通知</string>
    <string name="push_sound">声音</string>
    <string name="push_vibrate">振动</string>
    <string name="push_detail">是否推送详情</string>
    <string name="push_name">设置推送昵称</string>
    <string name="auto_download_attachment">自动下载缩略图和语音</string>
    <string name="auto_accept_group_invite">是否自动接收群邀请</string>
    <string name="black_list">黑名单列表</string>
    <string name="other_device_tips">是否Toast提示</string>
    <string name="device_list">设备管理</string>
    <string name="about_us">关于</string>
    <string name="setting_user_name">昵称</string>
    <string name="setting_user_phone">手机号</string>
    <string name="setting_user_pwd">修改密码</string>
    <string name="setting_user_wx">微信</string>
    <string name="setting_user_public">公开信息</string>
    <string name="setting_roster_alias">设置别名</string>
    <string name="setting_roster_ext">设置扩展信息</string>
    <string name="setting_user_private">私密信息</string>
    <string name="setting_user_disturb">设置免打扰</string>
    <string name="setting_account_manager">切换账号</string>
    <string name="setting_add_friend_auth_mode">好友验证类型</string>
    <string name="setting_add_friend_auth_question">好友验证问题</string>
    <string name="add_friend_auth_open">公开</string>
    <string name="add_friend_auth_approval">需要同意</string>
    <string name="add_friend_auth_answer">需要回答问题</string>
    <string name="add_friend_auth_reject">拒绝所有人</string>
    <string name="change_phone_tag">更换绑定手机号</string>
    <string name="bind_phone_tag">你已绑定手机号%1s</string>
    <string name="phone_verify_change">通过手机验证码方式</string>
    <string name="pwd_verify_change">通过密码更换</string>
    <string name="change_pwd_tag">更改密码</string>
    <string name="change_pwd_new_hint">请输入新密码</string>
    <string name="change_pwd_new_again_hint">请再次输入新密码</string>
    <string name="log_info">日志信息</string>
    <string name="dns_config">配置</string>
    <string name="dns_config_custom">自定义服务</string>
    <string name="dns_config_appId">App ID</string>
    <string name="dns_config_appId_colon">App ID：</string>
    <string name="dns_config_server">IM Server</string>
    <string name="dns_config_port">IM Port</string>
    <string name="dns_config_rest_server">Rest Server</string>
    <string name="dns_config_default">默认</string>
    <string name="dns_change_custom_title">您确认要关闭自定义服务吗</string>
    <string name="dns_change_appId_title">修改App ID</string>
    <string name="dns_change_server_title">修改IM Server</string>
    <string name="dns_change_port_title">修改IM Port</string>
    <string name="dns_change_rest_server_title">修改Rest Server</string>
    <string name="dns_change_custom_tips">尚未启动自定义服务</string>
    <string name="dns_change_save">保存</string>
    <string name="dns_change_save_tip">请填写三项完整信息</string>
    <string name="group_notify_all">所有人</string>
    <string name="group_notify_admin_at">群主和@</string>
    <string name="group_notify_none">关闭</string>
    <string name="group_join_auth_open">公开</string>
    <string name="group_join_auth_approval">需要同意</string>
    <string name="group_join_auth_reject">拒绝所有人</string>
    <string name="group_invite_open">开放</string>
    <string name="group_invite_admin">只有群主</string>
    <string name="group_beInvite_open">开放</string>
    <string name="group_beInvite_approval">需要同意</string>
    <string name="group_mute_none">不屏蔽</string>
    <string name="group_mute_notification">屏蔽本地消息通知</string>
    <string name="group_mute_chat">屏蔽消息</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="contact_scan">扫一扫</string>
    <string name="scan_notice">将二维码/条形码放到框内</string>
    <string name="about_us_desc">使用蓝莺IM专业技术</string>
    <string name="about_us_net_pre"></string>
    <string name="about_us_company">© 2019-%s 美信拓扑</string>
    <string name="call_switch_audio">切到语音通话</string>
    <string name="call_switch_camera">切换摄像头</string>
    <string name="call_camera_on">摄像头已开</string>
    <string name="call_cancel">取消</string>
    <string name="photo_album">相册</string>
    <string name="icp_no">京ICP备19033149号-11A</string>
    <string name="guardian_mode">青少年模式</string>
    <string name="guardian_mode_content">蓝莺IM的青少年模式，旨在呵护未成年人健康成长。在此模式下，App的部分功能将被限制使用，如果本App使用者是未成年人时，请监护人主动设置</string>
    <string name="open">开启</string>
    <string name="about_us_this_app">本APP（APPID:%s）服务提供方</string>
    <string name="about_us_unverified">❓未认证</string>
    <string name="about_us_unverified_developer">未认证开发者</string>
</resources>