<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:padding="@dimen/dimen_30"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:onClick="onCallCamera"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_call_camera" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_3"
            android:gravity="center"
            android:text="@string/call_camera_on"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:onClick="onCallHangup"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_call_hangup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_3"
            android:gravity="center"
            android:text="@string/call_cancel"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:onClick="onSwitchAudio"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_call_switch_audio" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/call_switch_audio"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:onClick="onSwitchCamera"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_call_switch_camera_big" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/call_switch_camera"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>